--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,5 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.28"
   },
-  "devDependencies": {
-    "eslint": "^7.6.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0"
-  }
+  "devDependencies": {}
 }
