--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cd frontend && yarn build",
+    "start": "cd backend && node server.js",
+    "dev": "run-p dev-server dev-client",
+    "dev-server": "cd backend && nodemon server.js",
+    "dev-client": "cd frontend && yarn start"
   },
   "repository": {
     "type": "git",
@@ -17,7 +21,15 @@
     "url": "https://github.com/fobos78/kidwars/issues"
   },
   "homepage": "https://github.com/fobos78/kidwars#readme",
-  "dependencies": {
-   
+  "dependencies": {},
+  "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5"
   }
 }
