--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.28"
+    "express-server": "^0.7.0",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.9.28",
+    "session-file-store": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
