--- a/electron-kidwars/package.json
+++ b/electron-kidwars/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-packager . MyTestApp --ignore=node_modules/electron*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "electron": "^9.2.0"
+  },
+  "devDependencies": {
+    "electron-packager": "^15.0.0"
   }
 }
